# aios

./: .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  DATABASE_SAFETY.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  instrumentation.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: build-android.yml  build-desktop.yml  build-ios.yml
clients/: README.md
clients/android/: PLAN.md  build.gradle.kts  gradlew  settings.gradle.kts
clients/android/app/: build.gradle.kts  proguard-rules.pro
clients/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
clients/desktop/src/: App.tsx
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/resources/: splash.html
clients/desktop/src-tauri/src/: lib.rs  main.rs
clients/ios/AiOS/: Info.plist
clients/ios/AiOS.xcodeproj/: project.pbxproj
clients/qt/: .gitignore  CMakeLists.txt  app.rc  build-android.sh  deploy-android.sh  hermes_ipc.py  watch-android.sh  watch-windows.sh
clients/qt/android/: AndroidManifest.xml
clients/qt/qml/: Main.qml
clients/qt/qml/components/: Card.qml  ChatInput.qml  ChatMessage.qml  Loading.qml  ModelSelector.qml  Sidebar.qml  SubSidebar.qml  TopBar.qml
clients/qt/qml/features/: Agent.qml  AiCode.qml  AiPodcast.qml  AiPpt.qml  AiSearch.qml  AiTranslate.qml  AiWriting.qml  ApiPlatform.qml  Audio.qml  Calendar.qml  Chat.qml  Code.qml  Contacts.qml  Credits.qml  Cron.qml  Email.qml  Favorites.qml  Files.qml  ForgotPassword.qml  ImagePage.qml  Kanban.qml  Knowledge.qml  LocalFiles.qml  LocalModel.qml  Login.qml  Marketplace.qml  Mcp.qml  Notes.qml  Prompts.qml  Register.qml  Search.qml  Settings.qml  Sheet.qml  TeamKnowledge.qml  Todo.qml  Usage.qml  Video.qml  Welcome.qml  Workflow.qml
clients/qt/qml/styles/: Theme.qml
clients/qt/src/: apimanager.cpp  apimanager.h  authmanager.cpp  authmanager.h  logger.h  main.cpp  storemanager.cpp  storemanager.h
data/: app-installs.json  app-versions.json
messages/en-US/: admin.json  agent.json  audio.json  auth.json  chat.json  common.json  errors.json  files.json  image.json  landing.json  settings.json  video.json  workflow.json
messages/zh-CN/: admin.json  agent.json  audio.json  auth.json  chat.json  common.json  errors.json  files.json  image.json  landing.json  settings.json  video.json  workflow.json
prisma/: schema.prisma  seed-roles.js  seed.ts
prisma/migrations/20260529235643_init/: migration.sql
public/: android-preview.html
scripts/: backup-db.sh  fix-mimo-display.js  prisma-safe.sh  safe-migrate.sh
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/(dashboard)/: layout.tsx
src/app/demo/: page.tsx
src/app/docs/: page.tsx
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ModelSelector.tsx
src/components/layout/: BottomNav.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Dropdown.tsx  Empty.tsx  Input.tsx  LanguageToggle.tsx  Loading.tsx  MarkdownRenderer.tsx  Modal.tsx  Progress.tsx  Select.tsx  Switch.tsx  Table.tsx  Tabs.tsx  ThemeProvider.tsx  ThemeToggle.tsx  Toast.tsx  (+1 more)
src/config/: site.ts
src/hooks/: useApi.ts  useClickOutside.ts  useDebounce.ts
src/lib/: bigint-polyfill.ts
src/store/: auth.ts  chat.ts  ui.ts
src/styles/: globals.css
src/types/: index.ts
(+223 files in other folders)
